--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - "8080:80"
     depends_on:
       - db
+    command: bash -c "docker-php-ext-install mysqli && apache2-foreground"
 
 volumes:
   db_data:
